--- a/index.html
+++ b/index.html
@@ -5,22 +5,29 @@
 	<title>
 		Music instruments
 	</title>
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 	<header>
 		<h1>Musical instruments</h1>
+     <h4>This site helps you decide What instrument you want to play</h4>
 
+      
+	</header>
+	<main>
+<section>
+ <nav>
 		<ol>
 			<li><a href="#">Home</a></li>
 			<li><a href="#">About us</a></li>
 			<li><a href="#">Contacts</a></li>
-      <h4>This site helps you decide What instrument you want to play</h4>
-	</header>
-	<main>
+      </nav>
+</section>
 <section>
+
   <h2>Guitar</h2>
-  <img src=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRoA1BMqS6zvNiTvi12z-UZLGrhOgXZGYmw8w&usqp=CAU alt=Guitar>
+  <img src=https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRoA1BMqS6zvNiTvi12z-UZLGrhOgXZGYmw8w&usqp=CAU alt=Guitar width="200px">
 
   <p>he guitar is a fretted musical instrument that typically has six strings. It is held flat against the player's body and played by strumming or plucking the strings with the dominant hand, while simultaneously pressing the strings against frets with the fingers of the opposite hand. A plectrum or individual finger picks may be used to strike the strings. The sound of the guitar is projected either acoustically, by means of a resonant chamber on the instrument, or amplified by an electronic pickup and an amplifier.</p>
 </section>
