--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@ Drums may be played individually, with the player using a single drum, and some 
 	<footer>
 2021 All Rights reserved
 	</footer>
+  <script src=app.js>
+  </script>
 </body>
 
 </html>
